# nexcore-fda-guidance

./: Cargo.toml  README.md
data/: fda_guidance.json
src/: format.rs  index.rs  lib.rs  main.rs  refresh.rs  types.rs
