[package]
name = "nexcore-fda-guidance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "FDA Guidance Documents: search, retrieval, and refresh for 2,794+ FDA guidance documents"
license.workspace = true

[dependencies]
nexcore-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dependencies.reqwest]
workspace = true
optional = true

[dependencies.clap]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[features]
default = []
cli = ["dep:clap", "dep:reqwest", "dep:tokio"]

[[bin]]
name = "fda-guidance"
path = "src/main.rs"
required-features = ["cli"]

[lints]
workspace = true
